--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "deploy": "bun run src/deployCommands/register.ts",
     "delete": "bun run src/deployCommands/delete.ts",
-    "start": "bun run src/index.ts"
+    "start": "bun run src/start.ts"
   },
   "type": "module",
   "devDependencies": {
