--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,9 @@
   },
   "linter": {
     "enabled": true,
+    "ignore": [
+      "node_modules"
+    ],
     "rules": {
       "recommended": true,
       "style": {
